GNOME Bugzilla – Bug 707206
Unable to set dark theme
Last modified: 2015-10-04 08:07:15 UTC
I'm using gnome-terminal 3.9.90 and if I try to use the dark variant of Adwaita theme for all the windows gnome-terminal remains with the light one. Previously this feature was working.
How do you set the 'dark theme', from the preferences dialogue? Does the checkbox stay checked? Also please see https://wiki.gnome.org/Apps/Terminal/ReportingBugs for more things to try.
Created attachment 254978 [details] GNOME 3.10 with dark theme
I use gnome-tweak-tool as app for setting the dark theme for all apps. I use UbuntuGNOME with all the available "official" PPAs to get the 3.10 version. In gnome-tweak-tool I enable that option and it remains activated. All the GNOME apps applies the dark theme but that's not the case in gnome-terminal. Please find attached a screenshot to clarify the issue
I guess the g-t specific pref interacts with the system pref. In any case this is fixed in 3.10.x (branch) but remains open for 3.11.x (master).
I don't think this can be fixed…
*** Bug 742040 has been marked as a duplicate of this bug. ***
Reopening, since I believe this can and should be fixed. Copying from the dupe bug: Gnome-terminal has its own setting instead of the global one, because some users (and the Fedora distro) chooses to make an exception from the global Gtk setting and override it to be dark. That's the reason it has a separate setting. On the other hand, if you have the light theme everywhere and want to switch to dark globally, changing the global setting doesn't effect g-t, it stays bright. This is indeed undesired, one would expect that gnome-terminal also changes. I can see two possible approaches to fix this situation: 1. Have a three-state setting in g-t: use the default, force light, or force dark. Not sure if transitioning from the current boolean setting would be problematic or not, but it's sure doable. The Prefs dialog would look a bit uglier. 2. Use dark theme if either the global or the g-t setting says so. This breaks symmetry between light and dark: you can have a setup where g-t is dark and everything else is light, but not the other way around. It's probably okay, since the rationale behind this checkbox is that many people prefer the traditional black background for terminals; noone's likely to go the other way around. The "Use dark theme variant" checkbox would be renamed to "Force dark theme variant". ChPe, any preference which one to go for?
Since the GtkSettings API lacks a 'reset' function, both 1 and 2 are unimplementable.
Can't we manually query the global value (e.g. directly from dconf) and explicitly set g-t's value to that? And have some manually set-up watch to catch when it changes? I'm not familiar with this API at all, but if it's really not solveable then it should be a feature request against GtkSettings.