prefs: Remove dark theme pref

It's more trouble than it's worth.

https://bugzilla.gnome.org/show_bug.cgi?id=707206
https://bugzilla.gnome.org/show_bug.cgi?id=742040
https://bugzilla.gnome.org/show_bug.cgi?id=742333
https://bugzilla.gnome.org/show_bug.cgi?id=649358